<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/proposalTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Introduce_proposal"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:layout_marginBottom="20dp"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <EditText
            android:id="@+id/proposalDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_proposal_description"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:layout_marginBottom="20dp"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <TextView
            android:id="@+id/proposalAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="italic"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/localityLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locality"
            android:textSize="18sp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/localityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/localitySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            android:enabled="false" />

        <TextView
            android:id="@+id/proposalDurationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proposal_duration"
            android:textSize="18sp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/durationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/proposalDurationSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            android:enabled="false" />

        <Button
            android:id="@+id/editProposalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Proposal"
            android:backgroundTint="@color/colorAccent"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hecho"
            android:backgroundTint="@color/colorAccent"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/voteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Votar"
            android:backgroundTint="@color/colorAccent"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textSize="18sp"
            android:visibility="visible" />


    </LinearLayout>
</ScrollView>